# marvis

./: .gitignore  Getting_Started.ipynb  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: docs.yml
data/cc18_semantic/: 10093.json  10101.json  11.json  12.json  125920.json  125922.json  14.json  146195.json  146800.json  146817.json  146819.json  146820.json  146821.json  146822.json  146824.json  146825.json  14952.json  14954.json  14965.json  14969.json  14970.json  15.json  16.json  167119.json  167120.json  167121.json  167124.json  167125.json  167140.json  167141.json  18.json  2074.json  2079.json  219.json  22.json  23.json  28.json  29.json  3.json  3021.json  (+32 more)
data/regression_semantic/: 361085.json  361086.json  361087.json  361088.json  361099.json  361103.json  361104.json  363370.json  363371.json  363372.json  363373.json  363374.json  363375.json  363376.json  363377.json  363387.json  363388.json  363389.json  363391.json  363394.json  363397.json  363399.json  363417.json  363418.json  363426.json  363431.json  363432.json  363434.json  363435.json  363436.json  363437.json  363438.json  363439.json  363440.json  363442.json  363443.json  363444.json  363447.json  363448.json  363452.json  (+1 more)
docs/: Makefile  conf.py  contributing.rst  index.rst  requirements.txt  troubleshooting.rst
docs/_build/doctrees/: changelog.doctree  contributing.doctree  index.doctree  troubleshooting.doctree
docs/_build/html/: .buildinfo  changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  troubleshooting.html
docs/api-reference/: marvis.data.rst  marvis.models.rst  marvis.utils.rst
docs/examples/: index.rst
docs/getting-started/: configuration.rst  installation.rst
docs/technical-guides/: evaluation-frameworks.rst
docs/tutorials/: basic-classification.rst  custom-datasets.rst
docs/user-guide/api-models/: index.rst
examples/audio/: README.md  __init__.py  audio_baselines.py  audio_datasets.py  evaluate_all_audio.py  marvis_tsne_audio_baseline.py
examples/tabular/: evaluate_llm_baselines_tabular.py  evaluate_on_dataset_tabular.py  evaluate_with_explanations_tabular.py  train_tabular_dataset_tabular.py  train_tabular_mix_tabular.py
examples/vision/: README.md  __init__.py  api_vlm_baseline.py  evaluate_all_vision.py  evaluate_bioclip2_biological_datasets.py  gemini_vlm_baseline.py  image_baselines.py  image_utils.py  marvis_image_baseline.py  openai_vlm_baseline.py  qwen_vl_baseline.py  simple_marvis_baseline.py
marvis/: __init__.py
marvis/data/: __init__.py  audio_embeddings.py  csv_utils.py  dataset.py  dataset_tabular.py  embeddings.py  evaluation_utils.py
marvis/models/: __init__.py  knn_utils.py  marvis_tsne.py  process_one_sample.py  qwen_prefix.py  tabular_baselines.py
marvis/train/: __init__.py  evaluator.py  save_utils.py  trainer.py
marvis/utils/: __init__.py  audio_utils.py  cache_invalidation.py  class_name_utils.py  device_utils.py  evaluation_args.py  feature_selection_utils.py  gpu_monitoring.py  json_utils.py  llm_evaluation_utils.py  logging.py  metadata_loader.py  metadata_validation.py  migration_utils.py  model_loader.py  model_utils.py  openml_mapping.py  resource_manager.py  results_manager.py  results_migration.py  seeding.py  semantic_axes.py  system.py  task_detection.py  training_args.py  unified_metrics.py  vlm_prompting.py  vlm_utils.py  wandb_extractor.py
marvis/viz/: __init__.py  base.py  tsne_functions.py
scripts/analysis/: analyze_ablation_experiments.py  analyze_all_regression_results.py  analyze_cc18_results_wandb_tabular.py  analyze_marvis_tabpfn_correlation.py  analyze_reasoning_traces.py  analyze_regression_2025_results_wandb_tabular.py  analyze_vlm_test_results.py  parse_openml_cc18_results.py
scripts/plots/: create_radar_plot.py  examine_specific_examples.py  generate_ablations_appendix.py  generate_marvis_pipeline_figure.py  generate_radar_caption.py
scripts/semantic_metadata/: check_metadata_coverage.py  generate_openml_semantic_info.py  standardize_metadata.py  validate_semantic_structures.py
tests/: README.md  test_audio_simple.py  test_comprehensive_vlm_prompting.py  test_embedding_cache.py  test_example_parameter_validation.py  test_install.py  test_jolt_config_loading.py  test_jolt_integration.py  test_marvis_tsne_regression_metrics.py  test_metadata_validation.py  test_mps_detection.py  test_regression_jolt.py  test_regression_metrics_fix.py  test_resource_management.py  test_tabllm_comprehensive.py
(+562 files in other folders)
